--- a/.github/workflows/library_generation.yml
+++ b/.github/workflows/library_generation.yml
@@ -14,12 +14,12 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - distro: foxy
-            branch: foxy
-          - distro: rolling
-            branch: main
           - distro: humble
             branch: humble
+          - distro: iron
+            branch: iron
+          - distro: rolling
+            branch: rolling
     steps:
       - uses: actions/checkout@v2
         with:
