change executables, enable UART, disable USB
for running UART example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,11 +10,14 @@ pico_sdk_init()
 
 link_directories(libmicroros)
 add_executable(pico_micro_ros_example
-    pico_micro_ros_example.c
-    pico_uart_transport.c
+    # usb_example.c
+    # usb_transport.c
+    uart_example.c
+    uart_transport.c
 )
 target_link_libraries(pico_micro_ros_example
     pico_stdlib
+    # hardware_uart
     microros
 )
 
@@ -26,8 +29,8 @@ SET(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -ffunction-sections -fdata-sections")
 SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -ffunction-sections -fdata-sections")
 
 # Configure Pico
-pico_enable_stdio_usb(pico_micro_ros_example 1)
-pico_enable_stdio_uart(pico_micro_ros_example 0)
+pico_enable_stdio_usb(pico_micro_ros_example 0)
+pico_enable_stdio_uart(pico_micro_ros_example 1)
 add_compile_definitions(PICO_UART_ENABLE_CRLF_SUPPORT=0)
 add_compile_definitions(PICO_STDIO_ENABLE_CRLF_SUPPORT=0)
 add_compile_definitions(PICO_STDIO_DEFAULT_CRLF=0)
