--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,38 +2,18 @@ cmake_minimum_required(VERSION 3.12)
 
 include($ENV{PICO_SDK_PATH}/external/pico_sdk_import.cmake)
 
-project(pico_micro_ros_example C CXX ASM)
+project(pico_micro_ros_examples C CXX ASM)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
 
 pico_sdk_init()
 
 link_directories(libmicroros)
-add_executable(pico_micro_ros_example
-    # usb_example.c
-    # usb_transport.c
-    uart_example.c
-    uart_transport.c
-)
-target_link_libraries(pico_micro_ros_example
-    pico_stdlib
-    # hardware_uart
-    microros
-)
-
-target_include_directories(pico_micro_ros_example PUBLIC
-    libmicroros/include
-)
+add_subdirectory(examples)
 
 SET(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -ffunction-sections -fdata-sections")
 SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -ffunction-sections -fdata-sections")
 
-# Configure Pico
-pico_enable_stdio_usb(pico_micro_ros_example 0)
-pico_enable_stdio_uart(pico_micro_ros_example 1)
-add_compile_definitions(PICO_UART_ENABLE_CRLF_SUPPORT=0)
-add_compile_definitions(PICO_STDIO_ENABLE_CRLF_SUPPORT=0)
-add_compile_definitions(PICO_STDIO_DEFAULT_CRLF=0)
-
-# Generate UF2
-pico_add_extra_outputs(pico_micro_ros_example)
+if (CMAKE_C_COMPILER_ID STREQUAL "GNU")
+    add_compile_options(-Wno-maybe-uninitialized)
+endif()
