--- a/.github/workflows/library_generation.yml
+++ b/.github/workflows/library_generation.yml
@@ -21,7 +21,7 @@ jobs:
           - distro: rolling
             branch: rolling
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
         with:
           ref: ${{ matrix.branch }}
       - name: Get date
@@ -33,7 +33,7 @@ jobs:
           sudo chown -R $(whoami) .
           sudo chmod -R 777 .
       - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v3
+        uses: peter-evans/create-pull-request@v6
         with:
           commit-message: micro-ROS ${{ matrix.distro }} Library auto-update ${{ steps.date.outputs.date }}
           title: micro-ROS Library auto-update ${{ steps.date.outputs.date }}
@@ -42,4 +42,6 @@ jobs:
           delete-branch: true
           reviewers: pablogs9
           base: ${{ matrix.branch }}
+          token: ${{ secrets.PR_TOKEN }}
+
 
